<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon"
            android:id="@+id/icon_teacher"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Salchichon"
                android:textSize="22sp"
                android:id="@+id/tv_teacher_name"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:progressTint="#FFD700"
                    android:rating="1"
                    android:isIndicator="true"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/tv_teacher_total_rating" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_aptitude_1"
            android:textSize="18dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:id="@+id/tv_aptitude_1"
            android:textColor="#FFFFFF"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="1"
                android:progressTint="#FFD700"
                android:rating="1"
                android:isIndicator="true"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/total_aptitude_1_rating" />

        </LinearLayout>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:layout_gravity="center_horizontal"
            android:stepSize="1"
            android:id="@+id/rating_aptitude1"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:progressTint="#FFD700"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aptitude_2"
            android:textSize="18dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:id="@+id/tv_aptitude_2"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:progressTint="#FFD700"
                    android:rating="1"
                    android:isIndicator="true"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/total_aptitude_2_rating" />

            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"
                android:id="@+id/rating_aptitude2"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressTint="#FFD700"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aptitude_3"
            android:textSize="18dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:id="@+id/tv_aptitude_3"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:progressTint="#FFD700"
                    android:rating="1"
                    android:isIndicator="true"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/total_aptitude_3_rating" />

            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"
                android:id="@+id/rating_aptitude3"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressTint="#FFD700"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aptitude_4"
            android:textSize="18dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:id="@+id/tv_aptitude_4"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:progressTint="#FFD700"
                    android:rating="1"
                    android:isIndicator="true"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/total_aptitude_4_rating" />

            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"
                android:id="@+id/rating_aptitude4"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressTint="#FFD700"/>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_aptitude_5"
            android:textSize="18dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_info_details"
            android:id="@+id/tv_aptitude_5"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="1"
                    android:progressTint="#FFD700"
                    android:rating="1"
                    android:isIndicator="true"
                    android:layout_weight="1"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:id="@+id/total_aptitude_5_rating" />

            </LinearLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_gravity="center_horizontal"
                android:stepSize="1"
                android:id="@+id/rating_aptitude5"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressTint="#FFD700"/>


        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>
